--- a/css/main.css
+++ b/css/main.css
@@ -513,7 +513,7 @@ b, strong {
         border-left: 10vw solid transparent;
         width: 0;
         bottom: 0;
-        left: 40%;
+        left: 36rem;
     }
 }
 .btn-custom {
